Fri Oct 24 18:31:25 2008  Søren Sandmann  <sandmann@redhat.com>

	* main.c (main): Use capplet_init() instead of gnome_program_init()

==================== 2.24.0.1 ====================

2008-08-23  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Wang Xin <jedy.wang@sun.com>

	* at-properties.desktop.in.in: improve tooltip wording (bug #545256)

2008-06-21  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* at-properties.desktop.in.in:
	* main.c: (setup_dialog): use standard icon name from the icon naming
	spec (bug #539336)

==================== 2.23.2 ====================

2008-04-16  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (cb_at_preferences): open the preferred applications dialog
	on the a11y page (bug #528196)

2008-04-08  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Matthias Clasen <mclasen@redhat.com>

	* main.c: (create_dialog): don't show the "accessible login" button if
	gdmsetup is not available (bug #526944)

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* at-enable-dialog.glade:
	* main.c: (create_dialog), (cb_at_preferences),
	(cb_keyboard_preferences), (cb_mouse_preferences),
	(cb_login_preferences), (setup_dialog): add button to launch mouse
	accessibility properties (bug #515078)

2008-02-09  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Jens Granseuer

	* at-enable-dialog.glade:
	* at-properties.desktop.in.in: move capplet to main menu, was the
	only one under Accessibility and rename "Assistive Tecnologies".
	Using gnome-control-center will appead under Personal  (closes
	bug #515075).

2008-01-02  Denis Washington  <denisw@svn.gnome.org>

	* main.c: (cb_keyboard_preferences): Spawn the accessibility
	tab of the keyboard capplet instead of at-properties.

2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>

	* main.c: (at_enable_update): enable the preferred applications button,
	  patch by Chris Jones (Closes: #499332)
