@@ -1,3 +1,7 @@
+Sat Oct 25 23:05:22 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* main.c: Use dbus methods to log out instead of GnomeClient.
+
 Fri Oct 24 18:31:25 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* main.c (main): Use capplet_init() instead of gnome_program_init()
